kubeyaml/ingress-one.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  namespace: accounting
spec:
  rules:
    - host: one.accounting.svc.cluster.local
      http:
        paths:
          - backend:
              service:
                name: nginx-one
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
